# family_health

./: .env.example  FamilyHealth.spec  README.md  build_launcher.bat  launcher.py  quickstart.py
.debug/: auth-debug.md  backend-schema-migration-debug.md  chat-session-default-role-debug.md  chat-session-streaming-debug.md  deployment-debug.md  desensitization-io-debug.md  env-config-debug.md  (+7 more)
backend/: README.md  pyproject.toml
backend/app/: __main__.py  main.py
backend/app/api/v1/: agent.py  auth.py  chat.py  export.py  file_preview.py  knowledge_base.py  mcp.py  model_registry.py  retrieval.py  router.py
backend/app/core/: config.py  crypto.py  paths.py  schema_migration.py
backend/app/models/: __init__.py  agent_mcp_binding.py  chat_attachment.py  chat_message.py  chat_session.py  desensitization_rule.py  export_item.py  export_job.py  kb_chunk.py  kb_document.py  knowledge_base.py  llm_runtime_profile.py  mcp_server.py  model_catalog.py  model_provider.py  pii_mapping_vault.py
backend/app/roles/: 私人医疗架构师.md
backend/app/schemas/: __init__.py  agent.py  auth.py  chat.py  export.py  knowledge_base.py  mcp.py  model_registry.py
backend/app/services/: agent_service.py  auth_service.py  chat_service.py  desensitization_service.py  export_service.py  file_text_extract.py  knowledge_base_service.py  mcp_service.py  model_registry_service.py
backend/tests/: test_attachment_upload_parsing.py  test_auth_flow.py  test_kb_management_features.py  test_phase1_phase2_flow.py  test_schema_migration.py  test_stage3_mcp_flow.py  test_stage4_kb_export_flow.py
(+30 files in other folders)
